# SVmodernisatie2026

./: .env.example  .gitignore  AGENTS.md  ARCHAISMEN.md  BIJBELVERWIJZINGEN.md  GIT_WORKFLOW.md  INTRO_EPILOOG.md  KANTTEKENINGEN.md  MODERNISATIE.md  OUTPUT_SCHEMA.md  README.md  WORKTREE_WORKFLOW.md  pyproject.toml
.agents/: settings.local.example.json
docs/: SV27_vergelijking.md  compare.html  compare_all.html  compare_hsv.html  diff.json  diff_LUK_1.json  diff_LUK_10.json  diff_LUK_11.json  diff_LUK_12.json  diff_LUK_13.json  diff_LUK_14.json  diff_LUK_15.json  diff_LUK_16.json  diff_LUK_17.json  diff_LUK_18.json  diff_LUK_19.json  diff_LUK_2.json  diff_LUK_20.json  diff_LUK_21.json  diff_LUK_23.json  diff_LUK_24.json  diff_LUK_3.json  diff_LUK_4.json  diff_LUK_5.json  diff_LUK_6.json  diff_LUK_7.json  diff_LUK_8.json  diff_LUK_9.json  diff_MRK_1.json  diff_MRK_10.json  diff_MRK_11.json  diff_MRK_12.json  diff_MRK_13.json  diff_MRK_14.json  diff_MRK_15.json  diff_MRK_16.json  diff_MRK_2.json  diff_MRK_3.json  diff_MRK_4.json  diff_MRK_5.json  (+124 more)
parallelbijbel/: README.md  build_book.py  rebuild_voorbeelden.sh
refdata/: afkortingen.csv  bible_book_references.csv
scripts/: adversarial_scan.py  bibref.py  check_refdata.py  compare_all.py  compare_hsv.py  compare_sv2027.py  fetch_hsv.py  fetch_hsv_nt.sh  fetch_sv2027.py  get_raw_sv_data.sh  lint_all.py  lint_archaismen.py  lint_carryovers.py  lint_false_friends.py  memory.py  meta_diff_aggregate.py  mkbatch.sh  next_batch.py  progress_timeline.py  rules_data.py  stoplist.txt  sv_spelling.csv  upsert_verse.py  wt.sh  (+2 more)
(+715 files in other folders)
